syntax = "proto3";

package connections.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/connections/v1;connectionsv1";

// Contact stores one owner-scoped directed contact relationship.
message Contact {
  string owner_user_id = 1;
  string contact_user_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// UsernameRecord stores one canonical username claim for a user.
message UsernameRecord {
  string user_id = 1;
  string username = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// PublicProfileRecord stores one user-managed profile for username verification.
message PublicProfileRecord {
  string user_id = 1;
  string display_name = 2;
  string avatar_url = 3;
  string bio = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message AddContactRequest {
  string owner_user_id = 1;
  string contact_user_id = 2;
}

message AddContactResponse {
  Contact contact = 1;
}

message RemoveContactRequest {
  string owner_user_id = 1;
  string contact_user_id = 2;
}

message RemoveContactResponse {}

message ListContactsRequest {
  string owner_user_id = 1;

  // The maximum number of contacts to return.
  // If zero, the server defaults to 10. The server clamps values above 50 to 50.
  int32 page_size = 2;

  // A page token received from a prior ListContactsResponse.
  string page_token = 3;
}

message ListContactsResponse {
  repeated Contact contacts = 1;
  string next_page_token = 2;
}

message SetUsernameRequest {
  string user_id = 1;
  string username = 2;
}

message SetUsernameResponse {
  UsernameRecord username_record = 1;
}

message GetUsernameRequest {
  string user_id = 1;
}

message GetUsernameResponse {
  UsernameRecord username_record = 1;
}

message LookupUsernameRequest {
  string username = 1;
}

message LookupUsernameResponse {
  UsernameRecord username_record = 1;
}

message SetPublicProfileRequest {
  string user_id = 1;
  string display_name = 2;
  string avatar_url = 3;
  string bio = 4;
}

message SetPublicProfileResponse {
  PublicProfileRecord public_profile_record = 1;
}

message GetPublicProfileRequest {
  string user_id = 1;
}

message GetPublicProfileResponse {
  PublicProfileRecord public_profile_record = 1;
}

message LookupPublicProfileRequest {
  string username = 1;
}

message LookupPublicProfileResponse {
  UsernameRecord username_record = 1;
  PublicProfileRecord public_profile_record = 2;
}

// ConnectionsService manages directed contact relationships between users.
service ConnectionsService {
  rpc AddContact(AddContactRequest) returns (AddContactResponse);
  rpc RemoveContact(RemoveContactRequest) returns (RemoveContactResponse);
  rpc ListContacts(ListContactsRequest) returns (ListContactsResponse);
  rpc SetUsername(SetUsernameRequest) returns (SetUsernameResponse);
  rpc GetUsername(GetUsernameRequest) returns (GetUsernameResponse);
  rpc LookupUsername(LookupUsernameRequest) returns (LookupUsernameResponse);
  rpc SetPublicProfile(SetPublicProfileRequest) returns (SetPublicProfileResponse);
  rpc GetPublicProfile(GetPublicProfileRequest) returns (GetPublicProfileResponse);
  rpc LookupPublicProfile(LookupPublicProfileRequest) returns (LookupPublicProfileResponse);
}
